Update application.yml for zipkin config

--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,10 @@
 spring:
   zipkin:
     base-url: http://localhost:9001/
+    enabled: false
+  sleuth:
+    enabled: false
+    
   datasource:
     #need to TimeZone settings
     url: jdbc:mysql://localhost:3306/restaurant?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -15,6 +19,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
         ddl-auto: update
+
 
 eureka:
   client:
