--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,8 @@
 spring:
   zipkin:
-    base-url: http://localhost:9001/
-    
+    baseUrl: http://localhost:9001/
+    sender:
+      type: rabbitmq
   datasource:
     #need to TimeZone settings
     url: jdbc:mysql://localhost:3306/restaurant?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
@@ -16,6 +17,11 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
         ddl-auto: update
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 
 eureka:
