Update application.yml with turn off of zipkin

--- a/application.yml
+++ b/application.yml
@@ -18,6 +18,10 @@ spring:
     port: 5672
     username: guest
     password: guest
+  sleuth:
+    enabled: true
+  zipkin:
+    enabled: true
 
 
 eureka:
