--- a/application.yml
+++ b/application.yml
@@ -32,9 +32,13 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
 
+security:
+  ignored: /**
+
 management:
   security:
     enabled: false
+
 
 
     
