--- a/application.yml
+++ b/application.yml
@@ -30,7 +30,7 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8760
+      defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
 
 management:
   security:
