--- a/application.yml
+++ b/application.yml
@@ -25,6 +25,12 @@ spring:
 
 
 
+eureka:
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
 
 management:
   security:
