--- a/application.yml
+++ b/application.yml
@@ -23,6 +23,12 @@ spring:
   zipkin:
     enabled: false
 
+eureka:
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
 
 
 
