--- a/application.yml
+++ b/application.yml
@@ -28,12 +28,12 @@ spring:
         enabled: true
 
 
-eureka:
-  client:
-    fetchRegistry: true
-    registerWithEureka: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+  #client:
+    #fetchRegistry: true
+    #registerWithEureka: true
+    #serviceUrl:
+      #defaultZone: http://localhost:8761/eureka
 
 
 
