--- a/Bill.yml
+++ b/Bill.yml
@@ -5,3 +5,13 @@ spring:
 
 server:
   port: 8084
+  
+  
+spring.cloud.stream.bindings:
+  input:
+    destination: bill
+    group: bill
+    consumer:
+      partitioned: false
+      instanceCount: 1
+      instanceIndex: 0
