--- a/Stock.yml
+++ b/Stock.yml
@@ -5,3 +5,13 @@ spring:
 
 server:
   port: 8083
+  
+ 
+spring.cloud.stream.bindings:
+  input:
+    destination: stock
+    group: stock
+    consumer:
+      partitioned: false
+      instanceCount: 1
+      instanceIndex: 0
